assets/css/main.scss
---
---

//#region MonoLisaImport
@font-face {
	font-family: MonoLisa;
	src: url('/../assets/fonts/MONOLISA-EXTRALIGHT.TTF') format('truetype');
	font-style: normal;
	font-weight: 100 200;
}

@font-face {
	font-family: MonoLisa;
	src: url('/../assets/fonts/MONOLISA-EXTRALIGHTITALIC.TTF') format('truetype');
	font-style: italic;
	font-weight: 100 200;
}

@font-face {
	font-family: MonoLisa;
	src: url('/../assets/fonts/MONOLISA-LIGHT.TTF') format('truetype');
	font-style: normal;
	font-weight: 300 400;
}

@font-face {
	font-family: MonoLisa;
	src: url('/../assets/fonts/MONOLISA-LIGHTITALIC.TTF') format('truetype');
	font-style: italic;
	font-weight: 300 400;
}

@font-face {
	font-family: MonoLisa;
	src: url('/../assets/fonts/MONOLISA-REGULAR.TTF') format('truetype');
	font-style: normal;
	font-weight: 500 600;
}

@font-face {
	font-family: MonoLisa;
	src: url('/../assets/fonts/MONOLISA-REGULARITALIC.TTF') format('truetype');
	font-style: italic;
	font-weight: 500 600;
}

@font-face {
	font-family: MonoLisa;
	src: url('/../assets/fonts/MONOLISA-MEDIUM.TTF') format('truetype');
	font-style: normal;
	font-weight: 700;
}

@font-face {
	font-family: MonoLisa;
	src: url('/../assets/fonts/MONOLISA-MEDIUMITALIC.TTF') format('truetype');
	font-style: italic;
	font-weight: 700;
}

@font-face {
	font-family: MonoLisa;
	src: url('/../assets/fonts/MONOLISA-BOLD.TTF') format('truetype');
	font-style: normal;
	font-weight: 800;
}

@font-face {
	font-family: MonoLisa;
	src: url('/../assets/fonts/MONOLISA-BOLDITALIC.TTF') format('truetype');
	font-style: italic;
	font-weight: 800;
}

@font-face {
	font-family: MonoLisa;
	src: url('/../assets/fonts/MONOLISA-BLACK.TTF') format('truetype');
	font-style: normal;
	font-weight: 900;
}

@font-face {
	font-family: MonoLisa;
	src: url('/../assets/fonts/MONOLISA-BLACKITALIC.TTF') format('truetype');
	font-style: italic;
	font-weight: 900;
}
//#endregion

:root {
	--dark-mode: 0;
	--main-color: #e1ebff;
	--accent-color: #df8600;
}

body {
	font-family: MonoLisa, monospace !important;
	font-weight: 700;
}

h1, h2, h3, h4, h5, h6 {
	font-weight: 800;
}

h1 {
	margin-bottom: 0 !important;

	& ~ p > small {
		margin: 0 !important;
	}
}

li {
	padding-left: 0.5rem;
} 

i.fa-square-arrow-up-right {
	font-size: 80%;
	vertical-align: 0.125rem;
	margin-left: 0.25rem;
}

i.fa-solid {
	font-size: 90%;
	vertical-align: 0.075rem;
	margin-right: 0.375rem;
}

i.fa-brands {
	&.fa-twitter {
		font-size: 93%;
		margin-right: 0.375rem;
	}
	
	&.fa-instagram {
		margin-right: 0.375rem;
	}

	&.fa-facebook {
		margin-right: 0.325rem;
		font-size: 95%;
	}

	&.fa-spotify {
		margin-right: 0.325rem;
		font-size: 95%;
	}

	&.fa-youtube {
		margin-right: 0.325rem;
		font-size: 95%;
	}
}

details.inlineDet {
	display: block;
	margin-right: 0.7rem;
}

#emptyPostlist {
	opacity: 70%;
	font-style: oblique;
}

.epoch_time {
	opacity: 30%;
	text-align: right;
	padding: 0;
	margin: -0.5rem 0;
	font-style: italic;
	font-weight: 300;
}

div.speaking_august {
	padding: 0.75rem 0.75rem 0.625rem 0.825rem;
	border-radius: 1rem;
	color: color-mix(in lab, var(--accent-color), #fff 50%);
	background-color: color-mix(in lab, var(--accent-color), #000 50%);

	& + time {
		text-align: right;
		font-size: 75%;
		float: right;
	}
}

a {
	padding: 0.25rem 0.375rem 0.125rem 0.375rem;
	margin: 0 -0.375rem;
	text-decoration: none;
	border-radius: 0.5rem;
	background-color: color-mix(in lab, var(--main-color), #0000 100%);
	color: color-mix(in lab, var(--accent-color), #000 40%);
	border: 2px solid #0000;
	border-bottom: 2px solid color-mix(in lab, var(--main-color), #000 45%);
			transition: 0.08s ease-in;
	 	 -o-transition: 0.08s ease-in;
		-ms-transition: 0.08s ease-in;
	   -moz-transition: 0.08s ease-in;
	-webkit-transition: 0.08s ease-in;


	&:hover {
		background-color: color-mix(in lab, var(--accent-color), #000 5%);
		color: color-mix(in lab, var(--main-color), #fff 95%);
		border: 2px solid color-mix(in lab, var(--accent-color), #0000 100%);
	}

	&.externalLink:hover {
		background-color: color-mix(in lab, var(--accent-color), #000 5%);
		color: color-mix(in lab, var(--main-color), #fff 95%);
		border: 2px solid color-mix(in lab, var(--accent-color), #fff 95%);
	}

	&.carrd:hover {
		background-color: color-mix(in lab, #40467E, #000 5%);
	}

	&.rentry:hover {
		background-color: color-mix(in lab, #262626, #000 5%);
	}

	&.twitter:hover {
		background-color: color-mix(in lab, #1D9BF0, #000 5%);
	}

	&.instagram:hover {
		background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
	}

	&.facebook:hover {
		background: color-mix(in lab, #0866FF, #000 5%);
	}

	&.spotify:hover {
		background-color: color-mix(in lab, #1ED760, #000 5%);
	}

	&.youtube:hover {
		background-color: color-mix(in lab, #FA1B0F, #000 5%);
	}

	&.gumroad:hover {
		background-color: color-mix(in lab, #FF90E8, #000 5%);
	}
}

a#backlink {
	border: 2px solid color-mix(in lab, var(--main-color), #000 45%);

	&:hover {
		border: 2px solid color-mix(in lab, var(--accent-color), #0000 100%);
	}
}

.poemPost {
	white-space:nowrap;
	
}

.post-content {
	overflow: scroll;
}

.w {
	padding: 3rem 5vmin !important;
	width: fit-content !important;
}

//#region -------------- No-Style -------------- //
  // -------------------------------------------- //
  
  // bg color is also needed in html in order to
  // block body's background propagation
  // see: https://stackoverflow.com/a/61265706
  html, body { background: var(--main-color); }
  
  html { height: 100%; }
  
  body {
	color: #070707;
	font-family: monospace;
	font-size: 16px;
	line-height: 1.5;
	margin: 0;
	min-height: 100%;
	overflow-wrap: break-word;
  }
  
  .post-meta { text-align: right; }
  
  h2, h3, h4, h5, h6 { 
	margin-top: 3rem;
}
  
  hr { margin: 2rem 0; }
  
  p { margin: 1rem 0; }
  
  li { margin: 0.5rem 0; }
  
  *:target { background: yellow; }
  
  .w {
	max-width: 640px;
	margin: 0 auto;
	padding: 4rem 2rem;
  }
  
  hr {
	text-align: center;
	border: 0;
  
	&:before { content: '/////' }
	&:after { content: attr(data-content) '/////' }
  }
  
  table { width: 100%; }
  
  table, th, td {
	border: thin solid black;
	border-collapse: collapse;
	padding: 0.4rem;
  }
  
  code {
	color: white;
	background: black;
  }
  
  div.highlighter-rouge code {
	display: block;
	overflow-x: auto;
	white-space: pre-wrap;
	padding: 1rem;
  }
  
  blockquote {
	font-style: italic;
	border: thin solid black;
	padding: 1rem;
  
	p { margin: 0; }
  }
  
  img {
	max-width: 100%;
	display: block;
	margin: 0 auto;
  }
//#endregion

